upd 0.7.4 completly redesigned and fixed dark mode and themes, added more options in custom theme, added debug for responsive phone layout

--- a/menu/settings.css
+++ b/menu/settings.css
@@ -96,7 +96,7 @@
     --text-main: #20242c;
     --text-muted: #596273;
     --accent-color: #246bca;
-    --danger-color: #c53a5a;
+    --danger-color: #d7113f;
 }
 
 html,
